# testC

./: CMakeLists.txt  main.c
base/: base.h
generateList/: GenerateList.c  GenerateList.h
gpt/: file.md  std.md  str.md  str_new.md  useful.md
graph/: GraphData.c  GraphData.h
list/base/: listData.h  listQuiz.c  listQuiz.h
list/solution/: listSolution.c  listSolution.h
queue/: queueData.h  queueQuiz.c  queueQuiz.h
queue/base/: queueData.h  queueQuiz.c  queueQuiz.h
stack/: stackData.c  stackData.h
train/: TrainStart.c  TrainStart.h
tree/: treeQuiz.c  treeQuiz.h
tree/base/: treeData.h  treeQuiz.c  treeQuiz.h
